# DumbBot

./: Cargo.toml  Dockerfile  README.md
src/: algorithm.rs  api_rust_data.rs  bid.rs  choosetrump.rs  hi.rs  knowledge.rs  main.rs  mcts_algorithm.rs  play.rs  test.rs
