[package]
name = "smartbot_bhoos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json="1.0"
serde={ version = "1.0", features = ["derive"] }
actix-web="4"
actix-cors = "0.6.4"
rand = {version = "0.8.5", default-features = false, features = ["std_rng"]}
[profile.release]
opt-level = "z"     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = "abort"     # Abort on panic
strip = true        # Automatically strip symbols from the binary.